--- a/hejackheNLP.ipynb
+++ b/hejackheNLP.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text preprocessing, N-grams and language models --- Tianyou He\n",
+    "# Text preprocessing, N-grams and language models - Tianyou He\n",
     "\n",
     "This exercise will use the “SIGNAL NEWS1” corpus which provides news stories formatted in JSON. Each line contains a JSON item with a news story. \n",
     "I first begin with importing all the necessary packages, followed by retrieving each news story from the “content” field of each JSON element in the corpus. I then lowercase them and place them in a list called **data**."
