--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "# train svm\n",
-    "clf3 = svm.SVC(gamma='auto')\n",
+    "clf3 = linear_model.SGDClassifier(loss='hinge', penalty='l2', alpha=1e-3, random_state=42, max_iter=5, tol=None)\n",
     "clf3.fit(train_X, train_y)\n",
     "\n",
     "# test model accuracy\n",
