--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment Two: Sentiment classification for social media CS918: 2019-20 - He Tianyou (U1951212)"
+    "# Sentiment classification for social media - He Tianyou"
    ]
   },
   {
